deploy/apply folder